3.1
New feature: Option to set the number of feed items imported from each feed (default 5)

3.0 (2013-03-16)
New feature: Option to select cron frequency
New feature: Code extensibility added to be compatible with add-ons
New feature: Option to set a limit to the number of feeds stored (previously 50, hard coded)
New feature: Option to define the format of the date shown below each feed item
New feature: Option to show or hide source of feed item
New feature: Option to show or hide publish date of feed item
New feature: Option to set text preceding publish date
New feature: Option to set text preceding source of feed item
New feature: Option to link title or not
New feature: Limit of 5 items imported for each source instead of 10
Enhanced: Performance improvement when publishing new feeds in admin
Enhanced: Query tuning for better performance
Enhanced: Major code rewrite, refactoring and inclusion of hooks
Enhanced: Updated Colorbox to v1.4.1
Enhanced: Better security implementations	
Enhanced: Better feed preview display
Fixed bug: Deletion of items upon source deletion not working properly
Requires: WordPress 3.3

2.2.3 (2012-11-01)
Fixed bug: Tab navigation preventing typing in input boxes
Removed: Feeds showing up in internal linking pop up

2.2.2 (2012-10-30)
Removed: Feeds showing up in site search results
Enhanced: Better tab button navigation when adding a new feed
Enhanced: Better guidance when a feed URL is invalid

2.2.1 (2012-10-17)
Fixed bug: wprss_feed_source_order assumes everyone is an admin

2.2 (2012-10-01)
New feature: Italian translation added
Enhanced: Feed source order changed to alphabetical
Fixed bug: repeated entries when having a non-valid feed source
Fixed bug: all imported feeds deleted upon trashing a single feed source

2.1 (2012-09-27)
New feature: Now localised for translations
Fixed bug: with date string
Fixed bug: $link_before and $link_after, now working
Enhanced: Added backwards compatibility for wp_rss_aggregator() function
